@@ -2116,6 +2116,9 @@ static int npc_parse_mapflag(char *w1,char *w2,char *w3,char *w4)
 	else if (strcmpi(w3,"indoors")==0) { // celest
 		map[m].flag.indoors=1;
 	}
+	else if (strcmpi(w3,"nogo")==0) { // celest
+		map[m].flag.nogo=1;
+	}
 	
 	return 0;
 }
